# Dynamic-ERP

./: .env.example  .eslintrc.cjs  .gitignore  .openclaude-profile.json  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  docker-compose.yml  examples.ts  package.json  playwright.config.ts  pnpm-lock.yaml  test-all-controllers.js  tsconfig.json  vitest.config.ts
.playwright-mcp/: console-errors.txt  network-requests.json  network-save.json  page-2026-03-31T07-33-29-226Z.yml  page-2026-03-31T07-42-30-278Z.yml  page-2026-03-31T07-43-04-246Z.yml  page-2026-03-31T07-45-02-738Z.yml  page-2026-04-01T11-00-12-248Z.yml  page-2026-04-01T11-00-51-164Z.yml  page-2026-04-01T11-01-06-900Z.yml  page-2026-04-01T11-27-43-794Z.yml  page-2026-04-01T11-28-19-293Z.yml  page-2026-04-01T11-28-27-809Z.yml  page-2026-04-01T11-31-10-132Z.yml  page-2026-04-01T11-31-40-416Z.yml  page-2026-04-01T11-31-48-770Z.yml  page-2026-04-01T14-58-24-259Z.yml  page-2026-04-01T14-58-37-202Z.yml  page-2026-04-01T15-28-03-306Z.yml
docs/: CLAUDE.md  (+13 more)
erpclaw-gateway/: Dockerfile  README.md  pyproject.toml
erpclaw-gateway/app/: config.py  main.py
erpclaw-gateway/app/auth/: jwks.py  jwt.py  mint_test_token.py
erpclaw-gateway/app/catalog/: cache.py  introspect.py
erpclaw-gateway/app/erpclaw_bridge/: loader.py
erpclaw-gateway/app/events/: bus.py
erpclaw-gateway/app/routes/: actions.py  catalog.py  events.py  modules.py  schema.py
erpclaw-gateway/app/schema/: pg_introspect.py
erpclaw-gateway/tests/: conftest.py  test_events_bus.py  test_events_route.py  test_jwks.py  test_modules_route.py  test_rbac.py
(+998 files in other folders)
