[project]
name = "erpclaw-gateway"
version = "0.1.0"
description = "FastAPI gateway exposing erpclaw's action catalog, schema, and dispatch over HTTP (Gateway MVP slice)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "python-jose[cryptography]>=3.3",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
